--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@
   --color-secondary: #d2d2d2;
   --color-accent: #e73434;
   --color-calendar: #a1a1a1;
+  --color-hover: #ccc;
 }
 
 @media (prefers-color-scheme: dark) {
